@@ -7,6 +7,10 @@ SimGrid (3.9) NOT RELEASED; urgency=low
  MSG:
  * New function: MSG_process_get_number()
 
+ XBT:
+ * kill synchronized dynars. We cannot think of a usecase where it's
+   really mandatory, and maintaining it was a pain in our codebase.
+
  -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
 
 SimGrid (3.8.1) stable; urgency=low
